--- a/container-images/github-runner/dockerfile
+++ b/container-images/github-runner/dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/powershell:lts-ubuntu-22.04
+FROM mcr.microsoft.com/azure-powershell:ubuntu-22.04
 
 # To make it easier for build and release pipelines to run apt-get,
 # configure apt to not require confirmation (assume the -y argument by default)
