Update docker file

--- a/container-images/azure-devops-agent-aca/dockerfile
+++ b/container-images/azure-devops-agent-aca/dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update \
         jq \
         git \
         iputils-ping \
+        libicu70 \
         libcurl4 \
         libunwind8 \
         netcat \
@@ -21,9 +22,17 @@ RUN apt-get update \
 
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 
-WORKDIR /azp
+WORKDIR /azp/
 
-COPY ./start.sh .
-RUN chmod +x start.sh
+COPY ./start.sh ./
+RUN chmod +x ./start.sh
 
-CMD ["./start.sh"]
+# Create agent user and set up home directory
+RUN useradd -m -d /home/agent agent
+RUN chown -R agent:agent /azp /home/agent
+
+USER agent
+# Another option is to run the agent as root.
+# ENV AGENT_ALLOW_RUNASROOT="true"
+
+ENTRYPOINT [ "./start.sh" ]
