--- a/container-images/github-runner-aca/dockerfile
+++ b/container-images/github-runner-aca/dockerfile
@@ -25,7 +25,8 @@ RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 
 RUN groupadd -g 121 runner \
   && useradd -mr -d /home/runner -u 1001 -g 121 runner \
-  && usermod -aG sudo runner
+  && usermod -aG sudo runner \
+  && echo '%sudo ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
 
 ENV AGENT_TOOLSDIRECTORY=/opt/hostedtoolcache
 RUN mkdir -p /opt/hostedtoolcache
