Debug entrypoint issue

--- a/container-images/github-runner-aca/dockerfile
+++ b/container-images/github-runner-aca/dockerfile
@@ -34,7 +34,6 @@ RUN mkdir -p /opt/hostedtoolcache
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /actions-runner
-
 COPY install_actions.sh /actions-runner
 
 RUN chmod +x /actions-runner/install_actions.sh \
@@ -44,6 +43,7 @@ RUN chmod +x /actions-runner/install_actions.sh \
 
 COPY token.sh entrypoint.sh app_token.sh /
 RUN chmod +x /token.sh /entrypoint.sh /app_token.sh
+RUN echo $(ls /)
 
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["./bin/Runner.Listener", "run", "--startuptype", "service"]
