--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -68,15 +68,21 @@ jobs:
 
           for key in "${!secrets[@]}"; do
             if [[ $key = \TF_VAR_* ]]; then
-              export "$key"="${secrets[$key]}"
+              lowerKey=$(echo "$key" | tr '[:upper:]' '[:lower:]')
+              finalKey=${lowerKey/tf_var_/TF_VAR_}
+              export "$finalKey"="${secrets[$key]}"
             fi
           done
 
           for key in "${!variables[@]}"; do
             if [[ $key = \TF_VAR_* ]]; then
-              export "$key"="${variables[$key]}"
+              lowerKey=$(echo "$key" | tr '[:upper:]' '[:lower:]')
+              finalKey=${lowerKey/tf_var_/TF_VAR_}
+              export "$lowerKey"="${variables[$key]}"
             fi
           done
+
+          echo -e "Custom environment variables:\n$(env | grep TF_VAR_)"
 
           export ARM_SUBSCRIPTION_ID=$(az login --identity --username $MSI_ID | jq -r '.[0] | .id')
           export ARM_TENANT_ID=$(az login --identity --username $MSI_ID | jq -r '.[0] | .tenantId')
