--- a/examples/azure_devops_container_app_uami/pipeline.yml
+++ b/examples/azure_devops_container_app_uami/pipeline.yml
@@ -4,11 +4,5 @@ trigger:
 pool: ${agent_pool_name}
 
 steps:
-- script: echo Hello, world from Container App with UAMI!
+- script: echo Hello, world!
   displayName: 'Run a one-line script'
-
-- script: |
-    echo "This agent is running in Azure Container Apps"
-    echo "Authentication method: User Assigned Managed Identity (UAMI)"
-    echo "Agent Pool: ${agent_pool_name}"
-  displayName: 'Show agent information'
